# nlp_amazon_reviews

./: .gitignore  README.md  api_config.py  config.py  logger.py  main.py  makefile  pyproject.toml
api/: schemas.py
api/responses/: response.py
api/routes/: __init__.py  prediction.py
docker/: Dockerfile.api  Dockerfile.frontend  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
frontend/: config.py  entrypoint.sh  logger.py  main.py  pyproject.toml
frontend/streamlit_app/: stream_app.py
lib/: base_prediction.py  constants.py  pytorch_prediction.py  transformation.py
notebooks/: amazon_reviews_pt.ipynb  amazon_reviews_tf.ipynb
