[tool.poetry]
name = "nlp-amazon-reviews"
version = "0.1.0"
description = ""
authors = ["Luis Fernando González Garay <luis95.garay@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
scikit-learn = "^1.5.0"
pandas = "^2.2.2"
nltk = "^3.8.1"
torch = {version = "^2.3.0+cu121", source = "pytorch-gpu"}
torchvision = {version = "^0.18.0+cu121", source = "pytorch-gpu"}
torchaudio = {version = "^2.3.0+cu121", source = "pytorch-gpu"}
transformers = "^4.41.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
matplotlib = "^3.9.0"
wget = "^3.2"

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
