[tool.poetry]
name = "streamlit_app"
version = "0.1.0"
description = ""
authors = ["Luis Fernando González Garay <luis95.garay@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
streamlit = "^1.31.1"
structlog = "^24.1.0"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
